auto distribute fuel to vault depositors (#64)
* auto distribute fuel to vault depositors

* fix tests

* fix cmp

* fix tests, add multi vd distributor test

* bump drift version, fix dependencies, add UserStats and FuelOverflow loading to ixs

* handle FuelOverflow account, add vd.update_cumulative_fuel_amount ix

* add reset_fuel_season admin ix

* update types

* add vault.fuel_distribution_mode and ixs

* add ts test for fuel, fix reset_fuel_season constraints, update VaultClient

* linter

* linter

* fix test, clippy

* bump deps

* typing

* migrate mocha to jest

* cache anchor step in workflow, fix lint

* fix tests

fdsa

* add bankrun test, pr feedback

* fix fuel distribution init

* clippy, fix comments

* fuel dist multiple user test

* fix naming in tests

* store fuel_per_share for distributions instead

* distribute fuel to VaultDepositors before the update, identify new deposits with magic timestamp

* add test for new depositors after update

* add more tests, reset_vault_fuel_season

* remove cliMode from vaultClient, add sharesExamples.test.ts

* fix tests and deps folder

* add fuel precision tests

* add fuel calcs to sdk

* linter

* fix tests run to completion

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
         "prepare": "husky install",
         "update-types": "cp target/types/drift_vaults.ts ts/sdk/src/types/drift_vaults.ts && prettier --write ts/sdk/src/types/drift_vaults.ts",
         "update-idl": "cp target/idl/drift_vaults.json ts/sdk/src/idl/drift_vaults.json",
-        "update-pyth": "cp deps/pyth.json target/idl/pyth.json",
-        "update-drift": "cp deps/drift.json target/idl/drift.json",
-        "anchor-tests": "yarn update-types && yarn update-idl && yarn update-drift && yarn update-pyth && yarn update-drift && yarn update-pyth && yarn run ts-mocha -p ./tsconfig.json -t 1000000 --exit tests/**/*.ts",
+        "update-pyth": "cp tests/fixtures/pyth.json target/idl/pyth.json",
+        "update-drift": "cp tests/fixtures/drift.json target/idl/drift.json",
+        "anchor-tests": "yarn update-types && yarn update-idl && yarn update-drift && yarn update-pyth && yarn update-drift && yarn update-pyth && yarn run jest --runInBand --forceExit",
         "anchor-tests:vaults": "yarn anchor-tests -g TestDriftVaults",
         "anchor-tests:protocol": "yarn anchor-tests -g TestProtocolVaults",
         "anchor-tests:tokenize": "yarn anchor-tests -g TestTokenizedDriftVaults",
@@ -19,23 +19,28 @@
         "anchor-tests:withdraw": "yarn anchor-tests -g TestWithdrawFromVaults"
     },
     "devDependencies": {
-        "@coral-xyz/anchor": "0.28.0",
+        "@coral-xyz/anchor": "0.29.0",
         "@drift-labs/sdk": "2.112.0-beta.1",
         "@solana/web3.js": "1.73.2",
         "@types/bn.js": "^5.1.0",
-        "@types/chai": "^4.3.0",
-        "@types/mocha": "^9.0.0",
+        "@types/jest": "29.5.14",
+        "@types/jest-expect-message": "1.1.0",
         "@typescript-eslint/eslint-plugin": "^4.28.0",
         "@typescript-eslint/parser": "^4.28.0",
-        "chai": "^4.3.4",
+        "anchor-bankrun": "0.3.0",
         "eslint": "^7.29.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
         "husky": "^8.0.0",
-        "mocha": "^9.0.3",
+        "jest": "^29.7.0",
+        "jest-expect-message": "^1.1.3",
         "prettier": "^2.6.2",
-        "ts-mocha": "^10.0.0",
-        "typescript": "^5"
+        "rpc-websockets": "7.5.1",
+        "solana-bankrun": "0.3.0",
+        "spl-token-bankrun": "^0.2.6",
+        "ts-jest": "^29.2.5",
+        "ts-node": "7.0.1",
+        "typescript": "5.6.2"
     },
     "engines": {
         "node": ">=20.18.0"
