--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
 {
   "compilerOptions": {
-    "types": [
-      "mocha",
-      "chai"
-    ],
+    "types": ["node", "jest"],
     "typeRoots": [
       "./node_modules/@types"
     ],
@@ -12,6 +9,8 @@
     ],
     "module": "commonjs",
     "target": "es6",
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+    "resolveJsonModule": true
+  },
+  "files": ["node_modules/jest-expect-message/types/index.d.ts"]
 }
