--- a/package.json
+++ b/package.json
@@ -22,25 +22,25 @@
         "@coral-xyz/anchor": "0.28.0",
         "@drift-labs/sdk": "2.110.0-beta.19",
         "@solana/web3.js": "1.73.2",
-        "@types/bn.js": "^5.1.0",
-        "@types/chai": "^4.3.0",
-        "@types/mocha": "^9.0.0",
-        "@typescript-eslint/eslint-plugin": "^4.28.0",
-        "@typescript-eslint/parser": "^4.28.0",
-        "chai": "^4.3.4",
-        "eslint": "^7.29.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^3.4.0",
-        "husky": "^8.0.0",
-        "mocha": "^9.0.3",
-        "prettier": "^2.6.2",
-        "ts-mocha": "^10.0.0",
-        "typescript": "^5"
+        "@types/bn.js": "5.1.0",
+        "@types/chai": "4.3.0",
+        "@types/mocha": "9.0.0",
+        "@typescript-eslint/eslint-plugin": "4.28.0",
+        "@typescript-eslint/parser": "4.28.0",
+        "chai": "4.3.4",
+        "eslint": "7.29.0",
+        "eslint-config-prettier": "8.3.0",
+        "eslint-plugin-prettier": "3.4.0",
+        "husky": "8.0.0",
+        "mocha": "9.0.3",
+        "prettier": "2.6.2",
+        "ts-mocha": "10.0.0",
+        "typescript": "5"
     },
     "engines": {
         "node": ">=20.18.0"
     },
     "dependencies": {
-        "@metaplex-foundation/js": "^0.20.1"
+        "@metaplex-foundation/js": "0.20.1"
     }
 }
