--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -9,9 +9,6 @@
 	"dependencies": {
 		"@coral-xyz/anchor": "0.29.0",
 		"@drift-labs/sdk": "2.113.0-beta.1",
-		"@ledgerhq/hw-app-solana": "7.2.4",
-		"@ledgerhq/hw-transport": "6.31.4",
-		"@ledgerhq/hw-transport-node-hid": "6.29.5",
 		"@metaplex-foundation/js": "0.20.1",
 		"@solana/wallet-adapter-ledger": "0.9.25",
 		"@solana/web3.js": "1.92.3",
@@ -21,6 +18,11 @@
 		"strict-event-emitter-types": "2.0.0",
 		"ts-node": "10.9.2",
 		"typescript": "5.6.3"
+	},
+	"optionalDependencies": {
+		"@ledgerhq/hw-app-solana": "7.2.4",
+		"@ledgerhq/hw-transport": "6.31.4",
+		"@ledgerhq/hw-transport-node-hid": "6.29.5"
 	},
 	"devDependencies": {
 		"@types/bn.js": "5.1.3"
