--- a/ts/sdk/tsconfig.json
+++ b/ts/sdk/tsconfig.json
@@ -11,7 +11,8 @@
 		],
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
-		"strict": true
+		"strict": true,
+		"declarationMap":  true
 	},
 	"include": [
 		"src/**/*"
