refactor: tsconfig drift sdk path to node module

--- a/ts/sdk/tsconfig.json
+++ b/ts/sdk/tsconfig.json
@@ -12,7 +12,10 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"strict": true,
-		"declarationMap":  true
+		"declarationMap":  true,
+		"paths": {
+			"@drift-labs/sdk": ["./node_modules/@drift-labs/sdk"]
+		}
 	},
 	"include": [
 		"src/**/*"
