--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -35,6 +35,8 @@
 		"build": "yarn clean && tsc"
 	},
 	"resolutions": {
-		"@types/bn.js": "5.1.3"
+		"@types/bn.js": "5.1.3",
+		"rpc-websockets": "10.0.0",
+		"@solana/web3.js": "1.98.0"	
 	}
 }
