--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -7,15 +7,17 @@
 		"lib": "lib"
 	},
 	"dependencies": {
-		"@coral-xyz/anchor": "0.29.0",
-		"@drift-labs/sdk": "2.131.0-beta.6",
 		"@metaplex-foundation/js": "0.20.1",
-		"@solana/web3.js": "1.98.0",
 		"commander": "11.1.0",
 		"dotenv": "16.4.5",
 		"strict-event-emitter-types": "2.0.0",
 		"ts-node": "10.9.2",
 		"typescript": "5.6.3"
+	},
+	"peerDependencies": {
+		"@drift-labs/sdk": "2.131.0-beta.6",
+		"@coral-xyz/anchor": "0.29.0",
+		"@solana/web3.js": "1.98.0"
 	},
 	"optionalDependencies": {
 		"@ledgerhq/hw-app-solana": "7.2.4",
@@ -24,7 +26,9 @@
 		"@solana/wallet-adapter-ledger": "0.9.25"
 	},
 	"devDependencies": {
-		"@types/bn.js": "5.1.3"
+		"@types/bn.js": "5.1.3",
+		"@drift-labs/sdk": "2.131.0-beta.6",
+		"@coral-xyz/anchor": "0.29.0"
 	},
 	"engines": {
 		"node": ">=16"
