upgrade to metaplex-foundation umi

--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -7,7 +7,9 @@
 		"lib": "lib"
 	},
 	"dependencies": {
-		"@metaplex-foundation/js": "0.20.1",
+		"@metaplex-foundation/umi": "1.4.1",
+		"@metaplex-foundation/umi-bundle-defaults": "1.4.1",
+		"@metaplex-foundation/mpl-token-metadata": "3.4.0",
 		"commander": "11.1.0",
 		"dotenv": "16.4.5",
 		"strict-event-emitter-types": "2.0.0",
