--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -16,7 +16,7 @@
 	},
 	"peerDependencies": {
 		"@coral-xyz/anchor": "0.29.0",
-		"@drift-labs/sdk": "2.131.0-beta.6",
+		"@drift-labs/sdk": "2.150.0-beta.2",
 		"@solana/web3.js": "1.98.0"
 	},
 	"optionalDependencies": {
@@ -27,11 +27,11 @@
 	},
 	"devDependencies": {
 		"@coral-xyz/anchor": "0.29.0",
-		"@drift-labs/sdk": "2.149.0-beta.1",
+		"@drift-labs/sdk": "2.150.0-beta.2",
 		"@types/bn.js": "5.1.3"
 	},
 	"engines": {
-		"node": ">=16"
+		"node": ">=22.14.x"
 	},
 	"scripts": {
 		"cli": "ts-node cli/cli.ts",
